# ScatterPath

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606160001_create_core_tables.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ai.py  base.py  enums.py  goal.py  parking_lot.py  plan.py  user.py
docs/: ai-actions.md  architecture.md  data-model.md  product.md  roadmap.md
